Fixed overflow

--- a/testsite/css/masterefsaestyle.css
+++ b/testsite/css/masterefsaestyle.css
@@ -15,7 +15,7 @@ body {
     background: #434343;
     font-family:'Open Sans', sans-serif;
     margin: 0;
-    /*overflow:hidden;*/
+    overflow:hidden;
     max-width:1600px;
 }
 /*
